prevent logo from getting cut off

--- a/_css/app_footer.scss
+++ b/_css/app_footer.scss
@@ -67,7 +67,7 @@ footer#globalfooter {
 			@else {
 				display:inline-block;
 				width:184px;
-				height:91px;
+				height:92px;
 				background-image:url(/_images/bcsr-logo-184x91.png);
 				background-size:cover;
 				background-repeat:no-repeat;
